--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -1,6 +1,6 @@
 import { Story, Meta } from '@storybook/react/types-6-0'
 
-import {{pascalCase name}} from './{{pascalCase name}}'
+import { {{pascalCase name}} } from './{{pascalCase name}}'
 
 export default {
   title: '{{pascalCase name}}',
